[package]
name = "light"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411"]