[package]
name = "light"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
defmt = "0.3.2"
defmt-rtt = "0.3.2"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411"]

[dev-dependencies]
defmt-test = "0.3.0"

[dev-dependencies.panic-probe]
version = "0.3.0"
features = ["print-defmt"]


[lib]
harness = false

[[test]]
name = "state_machine"
harness = false
